upload data to contract

--- a/jupyter/UnifiedConsentModel.ipynb
+++ b/jupyter/UnifiedConsentModel.ipynb
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 263,
+      "execution_count": 1,
       "metadata": {
         "inputHidden": false,
         "outputHidden": false
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 264,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -55,8 +55,8 @@
             "d:\\WorkSpace\\Maastricht\\LUCE\\DecentralizedHealthcareBackend\\jupyter\n",
             "dict_keys(['<stdin>:ConsentCode'])\n",
             "dict_keys(['abi', 'bin', 'bin-runtime'])\n",
-            "The contract is deployed with block number 3093 .\n",
-            "The contract has the address 0x445bBcA23663BCbbEAdF29A7bF949c2F89b83E47\n"
+            "The contract is deployed with block number 3095 .\n",
+            "The contract has the address 0x2885E124354b6c34D6119e512af3CB0CC21E4E3c\n"
           ]
         },
         {
@@ -67,7 +67,7 @@
               " '0x68C0eC5c56f0EDe43affA748e5D4aFd87f31513d']"
             ]
           },
-          "execution_count": 264,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -214,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 265,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 266,
+      "execution_count": 4,
       "metadata": {
         "tags": [
           "Boolean Items"
@@ -390,7 +390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 267,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -672,7 +672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 268,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -747,7 +747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 269,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -755,9 +755,9 @@
           "output_type": "stream",
           "text": [
             " interval  gas_provider  gas_requester  gas_access\n",
-            "        1         31224         110139       24621\n",
+            "        1         31224         110139       24599\n",
             " interval  gas_provider  gas_requester  gas_access\n",
-            "        1         48125          78028       36140\n"
+            "        1         48103          78006       36118\n"
           ]
         }
       ],
@@ -859,7 +859,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 270,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -867,7 +867,7 @@
           "output_type": "stream",
           "text": [
             " interval  gas_provider  gas_requester  gas_access  gas_update_area_group_code\n",
-            "        1         68979          69131       35474                      121437\n"
+            "        1         68957          69109       35474                      121526\n"
           ]
         },
         {
@@ -897,9 +897,9 @@
             "\u001b[1;31mReadTimeoutError\u001b[0m: HTTPConnectionPool(host='127.0.0.1', port=8545): Read timed out. (read timeout=10)",
             "\nDuring handling of the above exception, another exception occurred:\n",
             "\u001b[1;31mReadTimeout\u001b[0m                               Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[270], line 32\u001b[0m\n\u001b[0;32m     30\u001b[0m provider1\u001b[38;5;241m.\u001b[39mestimate_gas \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     31\u001b[0m requester1\u001b[38;5;241m.\u001b[39mestimate_gas \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m---> 32\u001b[0m gas_update_area_group_code \u001b[38;5;241m=\u001b[39m \u001b[43mprovider1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdate_area_group_code_baseline\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;66m# gas_provider_simple = provider1.upload_area_code_baseline()\u001b[39m\n\u001b[0;32m     34\u001b[0m \u001b[38;5;66m# gas_requester_simple = requester1.upload_area_code_baseline()\u001b[39m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;66m# gas_access_simple = requester1.access_area_baseline(provider1)\u001b[39m\n\u001b[0;32m     36\u001b[0m data_base \u001b[38;5;241m=\u001b[39m []\n",
-            "Cell \u001b[1;32mIn[267], line 119\u001b[0m, in \u001b[0;36mPerson.update_area_group_code_baseline\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    114\u001b[0m func \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcontract\u001b[38;5;241m.\u001b[39mfunctions\u001b[38;5;241m.\u001b[39mUpdateCountryCodeBaseline(\n\u001b[0;32m    115\u001b[0m     \u001b[38;5;66m# country_code_list, \u001b[39m\n\u001b[0;32m    116\u001b[0m     country_group_index_list\n\u001b[0;32m    117\u001b[0m )\n\u001b[0;32m    118\u001b[0m \u001b[38;5;66m# func.transact(self.person_dict)\u001b[39m\n\u001b[1;32m--> 119\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m)\u001b[49m\n",
-            "Cell \u001b[1;32mIn[267], line 246\u001b[0m, in \u001b[0;36mPerson.forward\u001b[1;34m(self, func, call)\u001b[0m\n\u001b[0;32m    244\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, func, call\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m    245\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mestimate_gas:\n\u001b[1;32m--> 246\u001b[0m         gas \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mestimate_gas\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    247\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m gas\n\u001b[0;32m    248\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+            "Cell \u001b[1;32mIn[8], line 32\u001b[0m\n\u001b[0;32m     30\u001b[0m provider1\u001b[38;5;241m.\u001b[39mestimate_gas \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     31\u001b[0m requester1\u001b[38;5;241m.\u001b[39mestimate_gas \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m---> 32\u001b[0m gas_update_area_group_code \u001b[38;5;241m=\u001b[39m \u001b[43mprovider1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdate_area_group_code_baseline\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;66m# gas_provider_simple = provider1.upload_area_code_baseline()\u001b[39m\n\u001b[0;32m     34\u001b[0m \u001b[38;5;66m# gas_requester_simple = requester1.upload_area_code_baseline()\u001b[39m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;66m# gas_access_simple = requester1.access_area_baseline(provider1)\u001b[39m\n\u001b[0;32m     36\u001b[0m data_base \u001b[38;5;241m=\u001b[39m []\n",
+            "Cell \u001b[1;32mIn[5], line 121\u001b[0m, in \u001b[0;36mPerson.update_area_group_code_baseline\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    116\u001b[0m func \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcontract\u001b[38;5;241m.\u001b[39mfunctions\u001b[38;5;241m.\u001b[39mUpdateCountryCodeBaseline(\n\u001b[0;32m    117\u001b[0m     country_code_list, \n\u001b[0;32m    118\u001b[0m     country_group_index_list\n\u001b[0;32m    119\u001b[0m )\n\u001b[0;32m    120\u001b[0m \u001b[38;5;66m# func.transact(self.person_dict)\u001b[39m\n\u001b[1;32m--> 121\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m)\u001b[49m\n",
+            "Cell \u001b[1;32mIn[5], line 248\u001b[0m, in \u001b[0;36mPerson.forward\u001b[1;34m(self, func, call)\u001b[0m\n\u001b[0;32m    246\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, func, call\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m    247\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mestimate_gas:\n\u001b[1;32m--> 248\u001b[0m         gas \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mestimate_gas\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    249\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m gas\n\u001b[0;32m    250\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
             "File \u001b[1;32md:\\Promgram\\Dev\\Miniconda\\envs\\luce\\lib\\site-packages\\web3\\contract\\contract.py:340\u001b[0m, in \u001b[0;36mContractFunction.estimate_gas\u001b[1;34m(self, transaction, block_identifier)\u001b[0m\n\u001b[0;32m    334\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mestimate_gas\u001b[39m(\n\u001b[0;32m    335\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m    336\u001b[0m     transaction: Optional[TxParams] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m    337\u001b[0m     block_identifier: Optional[BlockIdentifier] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m    338\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[0;32m    339\u001b[0m     setup_transaction \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_estimate_gas(transaction)\n\u001b[1;32m--> 340\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m estimate_gas_for_function(\n\u001b[0;32m    341\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maddress,\n\u001b[0;32m    342\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mw3,\n\u001b[0;32m    343\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfunction_identifier,\n\u001b[0;32m    344\u001b[0m         setup_transaction,\n\u001b[0;32m    345\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcontract_abi,\n\u001b[0;32m    346\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mabi,\n\u001b[0;32m    347\u001b[0m         block_identifier,\n\u001b[0;32m    348\u001b[0m         \u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39margs,\n\u001b[0;32m    349\u001b[0m         \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkwargs,\n\u001b[0;32m    350\u001b[0m     )\n",
             "File \u001b[1;32md:\\Promgram\\Dev\\Miniconda\\envs\\luce\\lib\\site-packages\\web3\\contract\\utils.py:203\u001b[0m, in \u001b[0;36mestimate_gas_for_function\u001b[1;34m(address, w3, fn_identifier, transaction, contract_abi, fn_abi, block_identifier, *args, **kwargs)\u001b[0m\n\u001b[0;32m    187\u001b[0m \u001b[38;5;124m\"\"\"Estimates gas cost a function call would take.\u001b[39m\n\u001b[0;32m    188\u001b[0m \n\u001b[0;32m    189\u001b[0m \u001b[38;5;124mDon't call this directly, instead use :meth:`Contract.estimate_gas`\u001b[39m\n\u001b[0;32m    190\u001b[0m \u001b[38;5;124mon your contract instance.\u001b[39m\n\u001b[0;32m    191\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m    192\u001b[0m estimate_transaction \u001b[38;5;241m=\u001b[39m prepare_transaction(\n\u001b[0;32m    193\u001b[0m     address,\n\u001b[0;32m    194\u001b[0m     w3,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    200\u001b[0m     fn_kwargs\u001b[38;5;241m=\u001b[39mkwargs,\n\u001b[0;32m    201\u001b[0m )\n\u001b[1;32m--> 203\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mw3\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meth\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mestimate_gas\u001b[49m\u001b[43m(\u001b[49m\u001b[43mestimate_transaction\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mblock_identifier\u001b[49m\u001b[43m)\u001b[49m\n",
             "File \u001b[1;32md:\\Promgram\\Dev\\Miniconda\\envs\\luce\\lib\\site-packages\\web3\\eth\\eth.py:293\u001b[0m, in \u001b[0;36mEth.estimate_gas\u001b[1;34m(self, transaction, block_identifier)\u001b[0m\n\u001b[0;32m    290\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mestimate_gas\u001b[39m(\n\u001b[0;32m    291\u001b[0m     \u001b[38;5;28mself\u001b[39m, transaction: TxParams, block_identifier: Optional[BlockIdentifier] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    292\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[1;32m--> 293\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_estimate_gas\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtransaction\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mblock_identifier\u001b[49m\u001b[43m)\u001b[49m\n",
