--- a/jupyter/UnifiedConsentModel.ipynb
+++ b/jupyter/UnifiedConsentModel.ipynb
@@ -6,7 +6,8 @@
       "metadata": {},
       "source": [
         "### Deploy and Interact with Consent based Smart Contract\n",
-        "The aim of this notebook is to compile, deploy and interact with consent based smart contract"
+        "\n",
+        "The aim of this notebook is to compile, deploy and interact with consent based smart contract\n"
       ]
     },
     {
@@ -14,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Compile contract from file"
+        "# Compile contract from file\n"
       ]
     },
     {
@@ -209,7 +210,7 @@
       "source": [
         "# Test cases\n",
         "\n",
-        "## Disease Name"
+        "## Disease Name\n"
       ]
     },
     {
@@ -223,7 +224,8 @@
         "pattern = r\"^[A-Z][0-9]{2}$\"\n",
         "pattern_compiled = re.compile(pattern)\n",
         "\n",
-        "def diseaseCode2IntHierarchy(code: str) -> (int,int):\n",
+        "\n",
+        "def diseaseCode2IntHierarchy(code: str) -> (int, int):\n",
         "    #  the code is a string like A00,B11, etc.\n",
         "    #  return the int code for chapter, group as a tuple\n",
         "    if not pattern_compiled.match(code):\n",
@@ -235,13 +237,11 @@
         "    chapter_int = int(ord(code[0]) - ord(\"A\")) + 1\n",
         "    group_str = code[1:3]\n",
         "    if group_str == \"**\":\n",
-        "        return chapter_int,2**128-1\n",
+        "        return chapter_int, 2**128 - 1\n",
         "    group_int = int(code[1:3])\n",
         "    # represent group_int as 128 bits\n",
         "    return chapter_int, group_int\n",
-        "    \n",
         "\n",
-        "        \n",
         "\n",
         "def diseaseCode2Int(code: str) -> int:\n",
         "    # r = fx.UInt16(0)\n",
@@ -274,6 +274,7 @@
         "    # return b_chapter + b_group + category_int\n",
         "    return b_chapter + b_group\n",
         "\n",
+        "\n",
         "def int2DiseaseCode(code: int) -> str:\n",
         "    if code == 0:\n",
         "        return \"*00.0\"\n",
@@ -290,7 +291,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## BooleanItems"
+        "## BooleanItems\n"
       ]
     },
     {
@@ -378,14 +379,14 @@
         "\n",
         "\n",
         "role_provider = 1\n",
-        "role_requester = 2\n"
+        "role_requester = 2"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Person"
+        "## Person\n"
       ]
     },
     {
@@ -676,7 +677,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Requester Class"
+        "## Requester Class\n"
       ]
     },
     {
@@ -751,7 +752,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Disease"
+        "## Disease\n"
       ]
     },
     {
@@ -1011,7 +1012,7 @@
         ")\n",
         "data_frame_base = pd.DataFrame(data_base)\n",
         "print(data_frame_base.to_string(index=False))\n",
-        "data_frame_base.plot.bar(x=\"interval\", y=\"gas_update_area_group_code\")\n"
+        "data_frame_base.plot.bar(x=\"interval\", y=\"gas_update_area_group_code\")"
       ]
     },
     {
@@ -1164,7 +1165,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Date"
+        "## Date\n"
       ]
     },
     {
@@ -1183,14 +1184,14 @@
         "requester1.Start_Month = 1\n",
         "requester1.Start_Day = 1\n",
         "requester1.Months = 12\n",
-        "date_gas = requester1.upload_date()\n"
+        "date_gas = requester1.upload_date()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Simple Items"
+        "## Simple Items\n"
       ]
     },
     {
@@ -1228,6 +1229,124 @@
         "print(\n",
         "    f\"upload_simple_items provider_gas {provider_gas}, requester_gas {requester_gas}, access_gas {access_gas}\"\n",
         ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Simulation\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def simulation():\n",
+        "    provider1 = Provider(\n",
+        "        name=\"Provider_area\",\n",
+        "        description=\"Provider1\",\n",
+        "        contract=contract,\n",
+        "        person_dict=provider_dict,\n",
+        "    )\n",
+        "    provider2 = Provider(\n",
+        "        name=\"Provider_area\",\n",
+        "        description=\"Provider2\",\n",
+        "        contract=contract,\n",
+        "        person_dict=provider_dict,\n",
+        "    )\n",
+        "    provider3 = Provider(\n",
+        "        name=\"Provider_area\",\n",
+        "        description=\"Provider3\",\n",
+        "        contract=contract,\n",
+        "        person_dict=provider_dict,\n",
+        "    )\n",
+        "    provider4 = Provider(\n",
+        "        name=\"Provider_area\",\n",
+        "        description=\"Provider4\",\n",
+        "        contract=contract,\n",
+        "        person_dict=provider_dict,\n",
+        "    )\n",
+        "\n",
+        "    requester1 = Requester(\n",
+        "        name=\"Requester_area\",\n",
+        "        description=\"Requester1\",\n",
+        "        contract=contract,\n",
+        "        person_dict=requester_1_dict,\n",
+        "    )\n",
+        "    requester2 = Requester(\n",
+        "        name=\"Requester_area\",\n",
+        "        description=\"Requester2\",\n",
+        "        contract=contract,\n",
+        "        person_dict=requester_1_dict,\n",
+        "    )\n",
+        "    requester3 = Requester(\n",
+        "        name=\"Requester_area\",\n",
+        "        description=\"Requester3\",\n",
+        "        contract=contract,\n",
+        "        person_dict=requester_1_dict,\n",
+        "    )\n",
+        "    requester4 = Requester(\n",
+        "        name=\"Requester_area\",\n",
+        "        description=\"Requester4\",\n",
+        "        contract=contract,\n",
+        "        person_dict=requester_1_dict,\n",
+        "    )\n",
+        "    requester5 = Requester(\n",
+        "        name=\"Requester_area\",\n",
+        "        description=\"Requester5\",\n",
+        "        contract=contract,\n",
+        "        person_dict=requester_1_dict,\n",
+        "    )\n",
+        "    requester6 = Requester(\n",
+        "        name=\"Requester_area\",\n",
+        "        description=\"Requester6\",\n",
+        "        contract=contract,\n",
+        "        person_dict=requester_1_dict,\n",
+        "    )\n",
+        "    requester7 = Requester(\n",
+        "        name=\"Requester_area\",\n",
+        "        description=\"Requester7\",\n",
+        "        contract=contract,\n",
+        "        person_dict=requester_1_dict,\n",
+        "    )\n",
+        "    requester8 = Requester(\n",
+        "        name=\"Requester_area\",\n",
+        "        description=\"Requester8\",\n",
+        "        contract=contract,\n",
+        "        person_dict=requester_1_dict,\n",
+        "    )\n",
+        "    requester9 = Requester(\n",
+        "        name=\"Requester_area\",\n",
+        "        description=\"Requester9\",\n",
+        "        contract=contract,\n",
+        "        person_dict=requester_1_dict,\n",
+        "    )\n",
+        "\n",
+        "    provider_list = [provider1, provider2, provider3, provider4]\n",
+        "    requester_list = [\n",
+        "        requester1,\n",
+        "        requester2,\n",
+        "        requester3,\n",
+        "        requester4,\n",
+        "        requester5,\n",
+        "        requester6,\n",
+        "        requester7,\n",
+        "        requester8,\n",
+        "        requester9,\n",
+        "    ]\n",
+        "\n",
+        "    for provider in provider_list:\n",
+        "        provider.estimate_gas = True\n",
+        "        provider.update_area_group_code()\n",
+        "        provider.estimate_gas = False\n",
+        "\n",
+        "    result_df = pd.DataFrame()\n",
+        "\n",
+        "\n",
+        "simulation()"
       ]
     }
   ],
